matrix/element.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: element
  template:
    metadata:
      labels:
        app: element
    spec:
      containers:
        - name: element
          image: vectorim/element-web:latest@sha256:3e7dbd4424de9e11c812bc740acf2725b2abe66ea0d0802023b56fd85d3fa09a
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config-rendered
              mountPath: /app/config.json
              subPath: config.json
              readOnly: true
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
            requests:
              memory: "32Mi"
              cpu: "25m"
      volumes:
        - name: config-tmpl
          configMap:
            name: element-config
        - name: config-rendered
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: element
  namespace: matrix
spec:
  type: NodePort
  selector:
    app: element
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30030
