matrix/synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: matrix
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:latest@sha256:abeb932f2a9293fcbb886d5ddd0f55a34d532708ebb8dc5642934dd91ca26237
          ports:
            - containerPort: 8008
              name: client
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /health
              port: 8008
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8008
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            limits:
              memory: "1Gi"
              cpu: "750m"
            requests:
              memory: "512Mi"
              cpu: "100m"
      volumes:
        - name: config
          configMap:
            name: synapse-config
        - name: data
          persistentVolumeClaim:
            claimName: matrix-synapse
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrix
spec:
  selector:
    app: synapse
  ports:
    - name: client
      port: 8008
      targetPort: 8008
